--- a/css/styless.css
+++ b/css/styless.css
@@ -1,5 +1,32 @@
-.titulo {
-   background-color: red;
-   color: white; 
+.titulo{
    text-align: center;
+   background-color: red;
+   color: white;
+   font-size: 30px;
+   font-weight: 555;
+}
+.class1, .class3 {
+   font-size: 22px;
+   background-color: rgb(253, 162, 162);
+   margin: 20px;
+   margin-left: 0;
+}
+.class2{ 
+   font-size: 30px;
+   background-color: rgb(253, 162, 162);
+}
+#id1{
+   font-size: 36px;
+   color: rgb(0,0,255);
+   margin: 20px;
+   margin-left: 0;
+   font-family: Verdana, DejaVu San, sans-serif;
+}
+#id2{
+   font-size: 27px;
+   font-weight: 700;
+   margin: 24px;
+   margin-left: 0;
+   background-color: rgb(114, 252, 146);
+   font-family: Verdana, DejaVu San, sans-serif;
 }
