--- a/css/styless.css
+++ b/css/styless.css
@@ -40,9 +40,9 @@ button {
 }
 .button2 {
 	background-color: yellow;
-}
+}*/
 
-body {
+/*body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -224,6 +224,7 @@ button {
 	width: 300px;
 }
 */
+
 /*body {
 	background-color: rgb(95, 125, 255);
 	display: flex;
@@ -234,7 +235,6 @@ button {
 	width: 400px;
 	height: 300px;
 }
-
 .center-div {
 	color: black;
 	font-weight: 900;
@@ -296,6 +296,466 @@ button {
 	border-radius: 8px;
 }
 body {
-	background-color: rgb(241, 241, 241);
+	background-color: rgb(0, 0, 0);
 	margin: 0;
 }*/
+
+/*body {
+	color: black;
+	font-family: "Courier New", Courier, monospace;
+	font-size: 23px;
+	text-align: center;
+}
+.box-area {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	gap: 52px;
+}
+.single-box {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 300px;
+	height: auto;
+}
+img {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 200px;
+	height: 200px;
+}
+.information {
+	margin-bottom: 32px;
+}*/
+
+/*body {
+	font-family: "Courier New", Courier, monospace;
+	text-align: center;
+	color: black;
+}
+img {
+	width: 100px;
+	height: 100px;
+}
+.information {
+	margin-bottom: 32px;
+}
+.box-area {
+	display: flex;
+	justify-content: center;
+	gap: 52px;
+}
+.single-box {
+	max-width: 200px;
+}*/
+
+/*body {
+	color: #333;
+	background-color: #aaa;
+	font-family: Roboto, sans-serif;
+	margin: 0;
+}
+.container {
+	display: flex;
+	border-radius: 10px;
+	width: 600px;
+	background: rgb(255, 255, 255);
+	box-shadow: inset 2px 4px 16px rgba(0, 0, 0, 0.2);
+	height: 250px;
+	flex-basis: 1 2 auto;
+	gap: 40px;
+	justify-content: flex-start;
+	font-size: 16px;
+	margin: auto;
+}
+.bold {
+	font-weight: 800;
+	margin-bottom: 10px;
+	font-size: 20px;
+}
+.circle {
+	border-radius: 50%;
+	color: royalblue;
+	font-size: 37px;
+	font-weight: 900;
+	width: 200px;
+	background: lavender;
+	height: 50px;
+	justify-content: center;
+	margin-top: 22px;
+	margin-left: 22px;
+	text-align: center;
+}
+.rest {
+	margin-top: 22px;
+}
+.continue {
+	background-color: rgb(32, 32, 205);
+	color: white;
+	padding: 8px 12px 8px 12px;
+	border-radius: 10px;
+	font-size: 16px;
+	border: none;
+	font-weight: 500;
+}
+.cancel {
+	background-color: rgb(255, 255, 255);
+	color: rgb(32, 32, 205);
+	padding: 8px 19px 8px 19px;
+	border-radius: 10px;
+	font-size: 16px;
+	border: none;
+	font-weight: 500;
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+}
+.x {
+	background-color: rgb(234, 233, 233);
+	color: rgb(93, 93, 93);
+	border-radius: 100%;
+	font-weight: 900;
+	font-size: 19px;
+	border: none;
+	margin-left: 60px;
+	height: 30px;
+	width: 30px;
+	text-align: center;
+}
+.text {
+	margin-bottom: 25px;
+	margin-right: 20px;
+}
+*/
+
+/*html,
+body {
+	height: 100%;
+}
+body {
+	font-family: Roboto, sans-serif;
+	margin: 0;
+	background: #aaa;
+	color: #333;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.container {
+	background: white;
+	width: 480px;
+	border-radius: 10px;
+	box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.2);
+	display: flex;
+	gap: 16px;
+	padding: 16px;
+}
+.circle {
+	color: royalblue;
+	font-size: 26px;
+	font-weight: 700;
+	background: lavender;
+	width: 42px;
+	height: 42px;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-shrink: 0;
+}
+.x {
+	background: #eee;
+	border-radius: 50%;
+	color: #888;
+	font-weight: 400;
+	font-size: 16px;
+	height: 24px;
+	width: 24px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid #eee;
+	padding: 0;
+}
+button {
+	cursor: pointer;
+	padding: 8px 16px;
+	border-radius: 8px;
+}
+button.continue {
+	background: royalblue;
+	border: 1px solid royalblue;
+	color: white;
+}
+button.cancel {
+	background: white;
+	border: 1px solid #ddd;
+	color: royalblue;
+}
+.bold {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	font-size: 18px;
+	font-weight: 700;
+	margin-bottom: 8px;
+}
+.text {
+	margin-bottom: 16px;
+}*/
+
+/*body {
+	color: black;
+	height: 100vh;
+	margin: 0;
+	overflow: hidden;
+	font-family: Roboto, sans-serif;
+	display: flex;
+	flex-direction: column;
+}
+ul {
+	list-style: none;
+}
+a {
+	text-decoration: none;
+	color: rgb(49, 49, 49);
+}
+.header,
+.footer {
+	display: flex;
+	justify-content: space-between;
+	padding: 16px;
+}
+.footer {
+	background-color: #eeeeee;
+}
+.left-links,
+.right-links {
+	display: flex;
+	gap: 20px;
+	margin-right: 20px;
+}
+.right-links {
+	display: flex;
+	margin-left: auto;
+}
+.content {
+	flex: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+button {
+	font-size: 16px;
+	border: 1px solid #eeeeee;
+	border-radius: 10px;
+	padding: 7px;
+	margin: 3px;
+}
+input {
+	width: 700px;
+	border-radius: 20px;
+	border: 3px solid #eeeeee;
+	padding: 10px;
+}
+img {
+	width: 600px;
+}*/
+
+/*body {
+	height: 100vh;
+	margin: 0;
+	overflow: hidden;
+	font-family: Roboto, sans-serif;
+	display: flex;
+	flex-direction: column;
+}
+img {
+	width: 600px;
+}
+
+button {
+	font-family: Roboto, sans-serif;
+	border: none;
+	border-radius: 8px;
+	background: #eee;
+	padding: 8px 16px;
+}
+input {
+	border: 1px solid #ddd;
+	border-radius: 16px;
+	padding: 8px 24px;
+	width: 400px;
+	margin-bottom: 16px;
+}
+.content {
+	flex: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+a {
+	color: #666;
+	text-decoration: none;
+}
+.header,
+.footer {
+	display: flex;
+	justify-content: space-between;
+	padding: 16px;
+}
+.footer {
+	background: #eee;
+}
+ul {
+	display: flex;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	gap: 16px;
+}
+*/
+
+body {
+	color: black;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.header {
+	background-color: darkmagenta;
+	color: white;
+	display: flex;
+	align-items: center;
+	font-weight: 900;
+	padding: 0 16px;
+	height: 72px;
+	font-size: 32px;
+}
+.footer {
+	height: 72px;
+	background: #eee;
+	color: darkmagenta;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.body {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	flex: 1;
+}
+
+.sidebar {
+	flex-shrink: 0;
+	padding: 16px;
+	width: 300px;
+	background: royalblue;
+	box-sizing: border-box;
+}
+.container {
+	padding: 32px;
+}
+.card {
+	border: 1px solid #eee;
+	box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.6);
+	border-radius: 4px;
+	padding: 16px;
+	margin: 16px;
+	width: 300px;
+}
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+a {
+	text-decoration: none;
+	color: white;
+	font-size: 24px;
+}
+
+li {
+	margin-bottom: 16px;
+}
+/*
+body {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	margin: 0;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	color: black;
+}
+
+.header {
+	height: 72px;
+	background: darkmagenta;
+	color: white;
+	display: flex;
+	align-items: center;
+	padding: 0 16px;
+	font-size: 32px;
+	font-weight: 900;
+}
+
+.footer {
+	height: 72px;
+	background: #eee;
+	color: darkmagenta;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.sidebar {
+	width: 300px;
+	background: royalblue;
+	box-sizing: border-box;
+	flex-shrink: 0;
+	padding: 16px;
+}
+.card {
+	border: 1px solid #eee;
+	box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
+	border-radius: 4px;
+	padding: 16px;
+	margin: 16px;
+	width: 300px;
+}
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	margin-bottom: 16px;
+}
+a {
+	color: white;
+	text-decoration: none;
+	font-size: 24px;
+}
+.container {
+	padding: 32px;
+	display: flex;
+	flex-wrap: wrap;
+}
+.body {
+	flex: 1;
+	display: flex;
+}
+*/
