--- a/css/styless.css
+++ b/css/styless.css
@@ -1,440 +1,123 @@
-/*.titulo {
-	text-align: center;
-	background-color: red;
-	color: rgb(0, 0, 0);
-	font-size: 32px;
-	font-weight: d;
-}
-.class {
-	font-size: 22px;
-	background-color: rgb(253, 162, 162);
-	margin: 20px;
-	margin-left: 0;
-}
-.class2 {
-	font-size: 30px;
-	background-color: rgb(253, 162, 162);
-}
-#id1 {
-	font-size: 36px;
-	color: rgb(0, 0, 255);
-	margin: 20px;
-	margin-left: 0;
-	font-family: Verdana, DejaVu San, sans-serif;
-}
-#id2 {
-	font-size: 27px;
-	font-weight: 700;
-	margin: 24px;
-	margin-left: 0;
-	background-color: rgb(114, 252, 146);
-	font-family: Verdana, DejaVu San, sans-serif;
-}
-button {
-	font-size: 20px;
-	font-family: Helvetica, "Times New Roman", sans-serif;
-}
-.button1 {
-	background-color: rgb(0, 0, 0);
-	color: rgb(0, 0, 0);
-}
-.button2 {
-	background-color: yellow;
-}*/
-
-/*body {
-	font-family: Arial, Helvetica, sans-serif;
-}
-
-p {
-	color: hsl(0, 0%, 0%);
-	font-weight: 800;
-}
-
-.para {
-	font-size: 22px;
-}
-.small-para {
-	font-size: 14px;
-}
-.button {
-	background-color: rgb(255, 255, 255);
-	color: rgb(0, 0, 0);
-	font-size: 20px;
-}
-.confirm {
-	background: green;
-	color: rgb(0, 0, 0);
-	font-weight: bold;
-}
-
-.child {
-	color: rgb(0, 0, 0);
-	font-weight: 800;
-	font-size: 14px;
-}
-
-body {
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-.one {
-  background: pink;
-  border: 3px solid blue;
-  
-  padding: 32px;
-  margin: 12px;
-}
-
-.two {
-  background: lightblue;
-  border: 3px solid purple;
-  
-  margin-bottom: 48px;
-}
-
-.three {
-  background: peachpuff;
-  border: 3px solid brown;
-  width: 200px;
- 
-  padding: 32px;
-  margin-left: auto;
-}*/
-
-/*body {
-	max-width: 500px;
-	margin: 16px auto;
-	background-color: rgb(207, 207, 207);
-}
-div {
-	color: black;
-	background-color: rgb(189, 224, 255);
-	padding: 8px;
-	border: 8px solid white;
-}
-.div1 {
-	font-weight: 900;
-	font-size: 16px;
-}
-.div2 {
-	border-top: 0;
-	border-bottom: 0;
-	padding: 16px 8px;
-}
-.div3 {
-	text-align: center;
-	padding: 8px;
-}
-button {
-	display: block;
-	margin: auto;
-	border: 1px solid #eee;
-	padding: 8px 24px;}
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: content-box;
-}
-
-.menu-container {
-	color: #fff;
-	background-color: #5995da; /* Blue 
-	padding: 20px 0 0;
-}
-
-.menu {
-	width: 900px;
-	display: flex;
-	 space-evenly;
-}
-.signup {
-	margin-left: auto;
-}
-.login {
-	margin-left: 20px;
-}
-.header-container {
-	color: #5995da;
-	background-color: #d6e9fe;
-	display: flex;
-	justify-content: center;
-}
-
+/*02-flex-header*/
 .header {
-	width: 900px;
-	height: 300px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.social,
-.logo,
-.subscribe {
-	border: 1px solid #5995da;
-}
-.photo-grid-container {
-	display: flex;
-	justify-content: center;
-	background-color: #fff;
-}
-
-.photo-grid {
-	width: 900px;
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-items: center;
-}
-
-.photo-grid-item {
-	border: 1px solid #ff0000;
-	width: 300px;
-	height: 300px;
-}
-.first-item {
-	order: 1;
-}
-.last-item {
-	order: -1;
-}
-.social,
-.subscribe {
-	align-self: flex-end;
-	margin-bottom: 20px;
-}
-.footer {
-	display: flex;
-	justify-content: space-between;
-}
-
-.footer-item {
-	border: 1px solid #fff;
-	background-color: #d6e9fe;
-	height: 200px;
-	flex: 1;
-}
-.footer-three,
-.footer-one {
-	flex: initial;
-	background-color: #5995da;
-	width: 300px;
-}
-*/
-
-/*body {
-	background-color: rgb(95, 125, 255);
-	display: flex;
-	border: 4px solid blue;
-	display: flex;
-	justify-content: center;
-	margin: 0px;
-	width: 400px;
-	height: 300px;
-}
-.center-div {
-	color: black;
-	font-weight: 900;
-	background-color: rgb(255, 156, 156);
-	border: 7px solid rgb(161, 8, 8);
-	width: 7em;
-	height: 6em;
-	text-align: center;
-}
-header {
-	display: flex;
-	background-color: white;
-	color: rgb(118, 38, 193);
-	font-family: "Brush Script MT", cursive;
-	border-bottom: 1px solid #ddd;
-	box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-	justify-content: space-between;
+	font-family: monospace;
+	background: papayawhip;
 	padding: 8px;
-}
-ul {
-	list-style: none;
 	display: flex;
-	margin: 0;
-	padding: 0;
-	gap: 16px;
-}
-a {
-	background-color: white;
-	text-decoration: none;
-	font-size: 24px;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .logo {
 	font-size: 48px;
-	font-weight: bold;
-	font-style: italic;
+	font-weight: 900;
+	color: tomato;
+	background: white;
+	padding: 4px 32px;
 }
-.resize {
-	width: 50px;
+
+ul {
+	list-style-type: none;
+	display: flex;
+	margin: 0;
+	padding: 0;
+	gap: 8px;
+}
+
+a {
+	font-size: 22px;
+	background: white;
+	padding: 8px;
+	text-decoration: none;
+}
+/*03-flex-header-2*/
+body {
+	margin: 0;
+	background: #eee;
+	font-family: Besley, serif;
+}
+
+.header {
+	background: white;
+	border-bottom: 1px solid #ddd;
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+	display: flex;
+	justify-content: space-between;
+	padding: 8px;
+}
+
+.profile-image {
 	background: rebeccapurple;
 	box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.5);
-	height: 50px;
 	border-radius: 50%;
 	width: 48px;
 	height: 48px;
 }
-.notification,
-.left {
+
+.logo {
+	color: rebeccapurple;
+	font-size: 32px;
+	font-weight: 900;
+	font-style: italic;
+}
+
+button {
+	border: none;
+	border-radius: 8px;
+	background: rebeccapurple;
+	color: white;
+	padding: 8px 24px;
+}
+
+a {
+	text-decoration: none;
+	color: rebeccapurple;
+}
+
+ul {
+	list-style-type: none;
+	display: flex;
+	margin: 0;
+	padding: 0;
+	gap: 16px;
+}
+.left,
+.right {
 	display: flex;
 	align-items: center;
 	gap: 16px;
 }
-button {
-	color: white;
-	background-color: rgb(118, 38, 193);
-	padding: 8px 24px;
-	font-size: 17px;
-	border: none;
-	border-radius: 8px;
-}
+/*04-flex-information*/
 body {
-	background-color: rgb(0, 0, 0);
-	margin: 0;
-}*/
-
-/*body {
-	color: black;
-	font-family: "Courier New", Courier, monospace;
-	font-size: 23px;
-	text-align: center;
-}
-.box-area {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	gap: 52px;
-}
-.single-box {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	width: 300px;
-	height: auto;
-}
-img {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 200px;
-	height: 200px;
-}
-.information {
-	margin-bottom: 32px;
-}*/
-
-/*body {
 	font-family: "Courier New", Courier, monospace;
 	text-align: center;
-	color: black;
 }
+
 img {
 	width: 100px;
 	height: 100px;
 }
-.information {
+
+.title {
+	font-size: 36px;
+	font-weight: 900;
 	margin-bottom: 32px;
 }
-.box-area {
+
+.container {
 	display: flex;
 	justify-content: center;
 	gap: 52px;
 }
-.single-box {
+.info {
 	max-width: 200px;
-}*/
-
-/*body {
-	color: #333;
-	background-color: #aaa;
-	font-family: Roboto, sans-serif;
-	margin: 0;
 }
-.container {
-	display: flex;
-	border-radius: 10px;
-	width: 600px;
-	background: rgb(255, 255, 255);
-	box-shadow: inset 2px 4px 16px rgba(0, 0, 0, 0.2);
-	height: 250px;
-	flex-basis: 1 2 auto;
-	gap: 40px;
-	justify-content: flex-start;
-	font-size: 16px;
-	margin: auto;
-}
-.bold {
-	font-weight: 800;
-	margin-bottom: 10px;
-	font-size: 20px;
-}
-.circle {
-	border-radius: 50%;
-	color: royalblue;
-	font-size: 37px;
-	font-weight: 900;
-	width: 200px;
-	background: lavender;
-	height: 50px;
-	justify-content: center;
-	margin-top: 22px;
-	margin-left: 22px;
-	text-align: center;
-}
-.rest {
-	margin-top: 22px;
-}
-.continue {
-	background-color: rgb(32, 32, 205);
-	color: white;
-	padding: 8px 12px 8px 12px;
-	border-radius: 10px;
-	font-size: 16px;
-	border: none;
-	font-weight: 500;
-}
-.cancel {
-	background-color: rgb(255, 255, 255);
-	color: rgb(32, 32, 205);
-	padding: 8px 19px 8px 19px;
-	border-radius: 10px;
-	font-size: 16px;
-	border: none;
-	font-weight: 500;
-	box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-}
-.x {
-	background-color: rgb(234, 233, 233);
-	color: rgb(93, 93, 93);
-	border-radius: 100%;
-	font-weight: 900;
-	font-size: 19px;
-	border: none;
-	margin-left: 60px;
-	height: 30px;
-	width: 30px;
-	text-align: center;
-}
-.text {
-	margin-bottom: 25px;
-	margin-right: 20px;
-}
-*/
-
-/*html,
+/*05-flex-modal*/
+html,
 body {
 	height: 100%;
 }
+
 body {
 	font-family: Roboto, sans-serif;
 	margin: 0;
@@ -444,7 +127,8 @@ body {
 	align-items: center;
 	justify-content: center;
 }
-.container {
+
+.modal {
 	background: white;
 	width: 480px;
 	border-radius: 10px;
@@ -453,7 +137,8 @@ body {
 	gap: 16px;
 	padding: 16px;
 }
-.circle {
+
+.icon {
 	color: royalblue;
 	font-size: 26px;
 	font-weight: 700;
@@ -466,7 +151,8 @@ body {
 	justify-content: center;
 	flex-shrink: 0;
 }
-.x {
+
+.close-button {
 	background: #eee;
 	border-radius: 50%;
 	color: #888;
@@ -480,22 +166,25 @@ body {
 	border: 1px solid #eee;
 	padding: 0;
 }
+
 button {
 	cursor: pointer;
 	padding: 8px 16px;
 	border-radius: 8px;
 }
+
 button.continue {
 	background: royalblue;
 	border: 1px solid royalblue;
 	color: white;
 }
+
 button.cancel {
 	background: white;
 	border: 1px solid #ddd;
 	color: royalblue;
 }
-.bold {
+.header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -505,10 +194,9 @@ button.cancel {
 }
 .text {
 	margin-bottom: 16px;
-}*/
-
-/*body {
-	color: black;
+}
+/*06-flex-layout*/
+body {
 	height: 100vh;
 	margin: 0;
 	overflow: hidden;
@@ -516,65 +204,7 @@ button.cancel {
 	display: flex;
 	flex-direction: column;
 }
-ul {
-	list-style: none;
-}
-a {
-	text-decoration: none;
-	color: rgb(49, 49, 49);
-}
-.header,
-.footer {
-	display: flex;
-	justify-content: space-between;
-	padding: 16px;
-}
-.footer {
-	background-color: #eeeeee;
-}
-.left-links,
-.right-links {
-	display: flex;
-	gap: 20px;
-	margin-right: 20px;
-}
-.right-links {
-	display: flex;
-	margin-left: auto;
-}
-.content {
-	flex: 1;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
 
-button {
-	font-size: 16px;
-	border: 1px solid #eeeeee;
-	border-radius: 10px;
-	padding: 7px;
-	margin: 3px;
-}
-input {
-	width: 700px;
-	border-radius: 20px;
-	border: 3px solid #eeeeee;
-	padding: 10px;
-}
-img {
-	width: 600px;
-}*/
-
-/*body {
-	height: 100vh;
-	margin: 0;
-	overflow: hidden;
-	font-family: Roboto, sans-serif;
-	display: flex;
-	flex-direction: column;
-}
 img {
 	width: 600px;
 }
@@ -586,6 +216,7 @@ button {
 	background: #eee;
 	padding: 8px 16px;
 }
+
 input {
 	border: 1px solid #ddd;
 	border-radius: 16px;
@@ -604,15 +235,18 @@ a {
 	color: #666;
 	text-decoration: none;
 }
+
 .header,
 .footer {
 	display: flex;
 	justify-content: space-between;
 	padding: 16px;
 }
+
 .footer {
 	background: #eee;
 }
+
 ul {
 	display: flex;
 	list-style: none;
@@ -620,76 +254,7 @@ ul {
 	padding: 0;
 	gap: 16px;
 }
-*/
-
-body {
-	color: black;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-.header {
-	background-color: darkmagenta;
-	color: white;
-	display: flex;
-	align-items: center;
-	font-weight: 900;
-	padding: 0 16px;
-	height: 72px;
-	font-size: 32px;
-}
-.footer {
-	height: 72px;
-	background: #eee;
-	color: darkmagenta;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.body {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	flex: 1;
-}
-
-.sidebar {
-	flex-shrink: 0;
-	padding: 16px;
-	width: 300px;
-	background: royalblue;
-	box-sizing: border-box;
-}
-.container {
-	padding: 32px;
-}
-.card {
-	border: 1px solid #eee;
-	box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.6);
-	border-radius: 4px;
-	padding: 16px;
-	margin: 16px;
-	width: 300px;
-}
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-a {
-	text-decoration: none;
-	color: white;
-	font-size: 24px;
-}
-
-li {
-	margin-bottom: 16px;
-}
-/*
+/*07-flex-layout-2*/
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -697,7 +262,6 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	color: black;
 }
 
 .header {
@@ -727,6 +291,7 @@ body {
 	flex-shrink: 0;
 	padding: 16px;
 }
+
 .card {
 	border: 1px solid #eee;
 	box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
@@ -735,6 +300,11 @@ body {
 	margin: 16px;
 	width: 300px;
 }
+.body {
+	flex: 1;
+	display: flex;
+}
+
 ul {
 	list-style-type: none;
 	margin: 0;
@@ -744,18 +314,15 @@ ul {
 li {
 	margin-bottom: 16px;
 }
+
 a {
 	color: white;
 	text-decoration: none;
 	font-size: 24px;
 }
+
 .container {
 	padding: 32px;
 	display: flex;
 	flex-wrap: wrap;
 }
-.body {
-	flex: 1;
-	display: flex;
-}
-*/
